Removing fixed navbar on mobile devices

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -2,11 +2,14 @@
 .navbar {
 	background-color: $primary;
 	overflow: hidden;
-	position: fixed;
-	top: 0;
-	left: 0;
 	width: 100%;
 	z-index: 1;
+
+  @media (min-width: 768px) {
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
 
 	a {
 		display: block;
